syntax = "proto3";
package chat;

service Chat {
    rpc ConnectServer (ConnectServerRequest) returns (stream Message);
    rpc SendMessage (SendMessageRequest) returns (Message);
}

message ConnectServerRequest {
    string user_name = 1;
}

message Message {
    string user_name = 2;
    string content = 3;
}

message SendMessageRequest {
    Message message = 1;
}
